--- a/index.html
+++ b/index.html
@@ -11,28 +11,25 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>D</span>
-        <span>O</span>
-        <span>Y</span>
-        <span>O</span>
-        <span>U</span>
-        <span>R</span>
-        <span>B</span>
-        <span>E</span>
-        <span>S</span>
-        <span>T</span>
-        <span>M</span>
-        <span>A</span>
         <span>H</span>
         <span>A</span>
         <span>L</span>
+        <span>L</span>
+        <span>O</span>
+        <span>A</span>
+        <span>U</span>
+        <span>R</span>
+        <span>E</span>
+        <span>L</span>
+        <span>I</span>
+        <span>A</span>
     </div>
     <div class="description">
-        <span>Mahal na mahal po kita, Goodluck po sa lahat ng Exams mo mahaal koo!!</span>
+        <span>Aku Ada Sesuatu Ni Buat Kamu</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Click Meee</a>
+            <a href="flower.html">Coba Pencet</a>
         </button>
         
     </div>
