--- a/index.html
+++ b/index.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Flowers 4 U</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Merry Christmas</title>
 </head>
+
 <body>
-    <div class="greetings">
-    <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
-        <span>A</span>
-        <span>U</span>
-        <span>R</span>
-        <span>E</span>
-        <span>L</span>
-        <span>I</span>
-        <span>A</span>
+
+<nav class="navContainer">
+    <ul>
+    <img class="LogoNav" src="https://seeklogo.com/images/M/merry-christmas-logo-BAA3C9D164-seeklogo.com.png" alt="">
+
+        <li><a class="active-nav"  href="#">Home</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Animations</a></li>
+        <li><a href="#">About</a></li>
+    </ul>
+</nav>
+
+    <div class="container">
+        <h1 class="animated">&#127876 Merry Christmas &#127876 </h1>
     </div>
-    <div class="description">
-        <span>Aku Ada Sesuatu Ni Buat Kamu</span>
-    </div>
-    <div class="button">
-        <button>
-            <a href="flower.html">Coba Pencet</a>
-        </button>
-        
-    </div>
+
+
 </body>
+
 </html>
